# synergy-hub

./: .clang-format  .clangd  .gitignore  .gitmodules  1  Brewfile  README.md  archive_git.sh  cloud-init.iso  ipython_test.py  meta-data.yaml  network-config.yaml  out.html  project_summary.md  pyproject.toml  temp.fish  temp.sh  temp.txt  user-data.yaml
projects/smart_package_delivery_system/central_server/socket_iot_system/: .clangd  CMakeLists.txt  conanfile.py
projects/smart_package_delivery_system/central_server/socket_iot_system/profiles/: linux-debug-clang-19-x86_64  raspberry_pi_4-release-gcc-12-armv8
projects/smart_package_delivery_system/central_server/socket_iot_system/src/app/iot_client-address_recognizer-c/: main.c
projects/smart_package_delivery_system/central_server/socket_iot_system/src/app/iot_client-elevator-c/: main.c
projects/smart_package_delivery_system/central_server/socket_iot_system/src/app/iot_client-user/: main.cpp
projects/smart_package_delivery_system/central_server/socket_iot_system/src/app/iot_client_c_delivery_robot/: main.c
projects/smart_package_delivery_system/central_server/socket_iot_system/src/app/iot_client_cpp-user/: main.c
projects/smart_package_delivery_system/central_server/socket_iot_system/src/app/iot_server/: iot_server.cpp  iot_server.hpp  main.cpp
projects/smart_package_delivery_system/central_server/socket_iot_system/src/common/protobuf_c/: message_initializer.c  message_initializer.h  message_preparer.c  message_preparer.h  smart_pkg_delivery.pb.c  smart_pkg_delivery.pb.h
projects/smart_package_delivery_system/central_server/socket_iot_system/src/common/protobuf_cpp/: smart_parcel.pb.cc  smart_parcel.pb.h  smart_pkg_delivery.pb.cc  smart_pkg_delivery.pb.h
projects/smart_package_delivery_system_copy/central_server/: README.md  pyproject.toml
projects/smart_package_delivery_system_copy/central_server/interconnection_protocol/sql/: _ddl-scheme.sql  _initialize_tables.sql  check_scheme.sql  dml-scenario1.sql
projects/smart_package_delivery_system_copy/central_server/interconnection_protocol/src/: smart_pkg_delivery-nanopb.options  smart_pkg_delivery.proto
projects/smart_package_delivery_system_copy/central_server/ros_master_node/: README.md  test.fish
projects/smart_package_delivery_system_copy/central_server/ros_master_node/.catkin_tools/profiles/default/: devel_collisions.txt
projects/smart_package_delivery_system_copy/central_server/ros_master_node/.devcontainer/: devcontainer.env  devcontainer.json
projects/smart_package_delivery_system_copy/central_server/ros_master_node/ros_serial_uno3/: platformio.ini
projects/smart_package_delivery_system_copy/central_server/ros_master_node/src/beginner_tutorials/: package.xml
projects/smart_package_delivery_system_copy/central_server/ros_master_node/src/bot3_kccistc_service/: .package.xml.swp
projects/smart_package_delivery_system_copy/central_server/ros_master_node/src/bot3_kccistc_service/src/: gpio_client.cpp
projects/smart_package_delivery_system_copy/central_server/ros_master_node/src/oroca_ros_tutorials/src/: ros_tutorial_msg_publisher.cpp
projects/smart_package_delivery_system_copy/central_server/ros_master_node/temp/src/: oroca_ros_tutorials_publisher.cpp
projects/smart_package_delivery_system_copy/central_server/socket_iot_system/: conanfile.py
projects/smart_package_delivery_system_copy/central_server/socket_iot_system-iot_client-python/src/iot_client/: main-address_recognizer.py
projects/smart_package_delivery_system_copy/central_server/socket_iot_system/src/app/iot_client-delivery_robot/: iot_client_cpp.h
projects/smart_package_delivery_system_copy/central_server/socket_iot_system/src/app/iot_client-elevator-c/: main.c
projects/smart_package_delivery_system_copy/central_server/socket_iot_system/src/app/iot_client-user/: main.cpp
projects/smart_parcel_system/central_server/socket_iot_system/: CMakeLists.txt  CMakeUserPresets.json
projects/smart_parcel_system/central_server/socket_iot_system/profiles/: linux-debug-clang-19-x86_64  raspberry_pi_4-release-clang-19-armv8
projects/smart_parcel_system/central_server/socket_iot_system/test_package/: conanfile.py
prototypes/_initialization/project-clang-qt/: CMakeLists.txt  CMakePresets.json  cmake-qt-6.8.0-clang-arm32v7-raspberrypi4-toolchain.cmake
prototypes/study/qt_study/AiotClientQt/: CMakeLists.txt  CMakeLists_temp.txt  main.cpp  mainwidget.ui  mainwindow.cpp  mainwindow.ui  maniwidget.ui  tab2socketclient.ui  widget.ui
prototypes/study/qt_study/p657_helloworld/: .clangd  CMakeLists.txt  CMakePresets.json  CustomWidget.cpp  CustomWidget.h  _temp.txt  cmake-qt-6.8.0-clang-arm64-raspberrypi4-toolchain.cmake  main.cpp  toolchain copy.cmake  toolchain.cmake  toolchain_gcc.cmake
prototypes/study/qt_study/testQt/: CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  _about_cmake_preset.jsonc  cmake-raspberrypi-arm32v7-toolchain.cmake  cmake-toolchain-raspberrypi-arm32v7_32.cmake  cmake-toolchain-raspberrypi-arm32v7_64.cmake  temp.txt
study/cpp_study/boost_study/: CMakeLists.txt  cpp.cpp  cpp.hpp  cppa.cpp
study/cpp_study/boost_study/boost-tcp-server-client/: CMakeLists.txt  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp
study/cpp_study/boost_study/example1/: cpp.cpp
study/cpp_study/conan_study/: CMakeLists.txt  README.md  conanfile.py  pyproject.toml  temp.txt
study/cpp_study/conan_study/profiles/: linux_debug  windows_debug_mvsc_dynamic  windows_debug_mvsc_static  windows_llvm_clang_debug
study/cpp_study/conan_study/src/: main.cpp
study/cpp_study/conan_study/test_package/: conanfile.py
study/cpp_study/vcpkg_study/: .env  .gitignore  .template.env  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.template.json  README.md  main.cpp  setup_dev_env.fish  vcpkg.json
study/python_study/python-study/: pyproject.toml
study/python_study/python-study/python_study/: main.py
study/qt_study/testQt/: CMakeLists.txt  CMakePresets.json  main.cpp  mainwindow.cpp  mainwindow.ui  temp.txt  testQt_en.ts
(+763 files in other folders)
