[project]
authors = [{ name = "wbfw109v2", email = "wbfw109v2@example.com" }]
description = "Cpp environment"
name = "cpp-study"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["cmake>=3.30.2,<4", "conan>=2.6.0,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { solve-group = "default" }
