[project]
authors = [{name = "wbfw109v2", email = "wbfw109v2@example.com"}]
dependencies = [
  "rich>=13.7.1,<14",
  "opencv-python>=4.10.0.84,<5",
  "pyside6>=6.7.2,<7", "pip>=24.2,<25",
]

description = "Opencv test"
name = "python-study"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
python-study = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python python_study/main.py"

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"
